[SRC] Remove SVN keywords after migration to GIT

--- a/README
+++ b/README
@@ -1,12 +1,7 @@
 ------------------------------
-        OpenPom how-to 
+        OpenPOM how-to 
 ------------------------------
 
-  $Date$
-
-  OpenPom $Revision$
-  $HeadURL$
- 
   Copyright 2010, Exosec
   Licensed under GPL Version 2.
   http://www.gnu.org/licenses/
