Add netmax79 to the list of contributors
Issue 3: Icinga Patch & short_open_tag=off
http://code.google.com/p/openpom/issues/detail?id=3

Issue 4: German translation
http://code.google.com/p/openpom/issues/detail?id=4

Issue 8: Backendlinks broken in config
http://code.google.com/p/openpom/issues/detail?id=8

--- a/src/README
+++ b/src/README
@@ -280,3 +280,4 @@ Bertrand Jacquin   - bjacquin@exosec.fr
 Alexandre Bray     - abray@exosec.fr
 Julien Thomas      - jthomas@exosec.fr
 
+netmax79           - netma...@gmail.com
