Add Brian Czapiga to the list of contributors
Icinga compatibility: fix hardcoded nagios_programstatus using the
$BACKEND configuration variable.

--- a/src/README
+++ b/src/README
@@ -281,3 +281,5 @@ Alexandre Bray     - abray@exosec.fr
 Julien Thomas      - jthomas@exosec.fr
 
 netmax79           - netma...@gmail.com
+Brian Czapiga      - rys@evool.com
+
