--- a/README
+++ b/README
@@ -33,48 +33,8 @@ mysql> grant select on ndoutils.* to 'openpom'@'127.0.0.1' identified by 'my_pas
 mysql> flush privileges;
 
 For performance reason you have to set up index on some ndoutils tables.
-Connect to your mysql server and use the correct database then inject these lines :
-ALTER TABLE `nagios_commenthistory` ADD INDEX ( `comment_source` );
-ALTER TABLE `nagios_hosts` ADD INDEX ( `display_name` );
-ALTER TABLE `nagios_hosts` ADD INDEX ( `address` );
-ALTER TABLE `nagios_services` ADD INDEX ( `display_name` );
-ALTER TABLE `nagios_notifications` ADD INDEX ( `object_id` );
-ALTER TABLE `nagios_notifications` ADD INDEX ( `start_time` );
-ALTER TABLE `nagios_notifications` ADD INDEX ( `end_time` );
-ALTER TABLE `nagios_downtimehistory` ADD INDEX ( `object_id` );
-ALTER TABLE `nagios_downtimehistory` ADD INDEX ( `scheduled_end_time` );
-ALTER TABLE `nagios_downtimehistory` ADD INDEX ( `entry_time` );
-ALTER TABLE `nagios_acknowledgements` ADD INDEX ( `object_id` );
-ALTER TABLE `nagios_acknowledgements` ADD INDEX ( `entry_time` );
-ALTER TABLE `nagios_statehistory` ADD INDEX ( `object_id` );
-ALTER TABLE `nagios_statehistory` ADD INDEX ( `state_time` );
-ALTER TABLE `nagios_contactnotifications` ADD INDEX ( `notification_id` );
-ALTER TABLE `nagios_contactnotifications` ADD INDEX ( `contact_object_id` );
-ALTER TABLE `nagios_flappinghistory` ADD INDEX ( `event_time` );
-ALTER TABLE `nagios_flappinghistory` ADD INDEX ( `object_id` );
-ALTER TABLE `nagios_scheduleddowntime` ADD INDEX ( `object_id` );
-
-ALTER TABLE `nagios_commenthistory` ADD INDEX ( `object_id` );
-ALTER TABLE `nagios_commenthistory` ADD INDEX ( `entry_time` );
-ALTER TABLE `nagios_commenthistory` ADD INDEX ( `author_name` );
-ALTER TABLE `nagios_commenthistory` ADD INDEX ( `deletion_time` );
-ALTER TABLE `nagios_commenthistory` ADD INDEX ( `entry_type` );
-ALTER TABLE `nagios_commenthistory` ADD INDEX ( `comment_data` );
-ALTER TABLE `nagios_contactgroup_members` ADD INDEX ( `contactgroup_id` );
-ALTER TABLE `nagios_contactgroups` ADD INDEX ( `contactgroup_object_id` );
-ALTER TABLE `nagios_contacts` ADD INDEX ( `contact_object_id` );
-ALTER TABLE `nagios_downtimehistory` ADD INDEX ( `actual_end_time` );
-ALTER TABLE `nagios_host_contactgroups` ADD INDEX ( `host_id` );
-ALTER TABLE `nagios_hostgroup_members` ADD INDEX ( `hostgroup_id` );
-ALTER TABLE `nagios_hostgroup_members` ADD INDEX ( `host_object_id` );
-ALTER TABLE `nagios_hostgroups` ADD INDEX ( `hostgroup_object_id` );
-ALTER TABLE `nagios_objects` ADD INDEX ( `objecttype_id` );
-ALTER TABLE `nagios_objects` ADD INDEX ( `name1` );
-ALTER TABLE `nagios_scheduleddowntime` ADD INDEX ( `downtime_type` );
-ALTER TABLE `nagios_service_contactgroups` ADD INDEX ( `service_id` );
-ALTER TABLE `nagios_service_contactgroups` ADD INDEX ( `contactgroup_object_id` );
-ALTER TABLE `nagios_services` ADD INDEX ( `host_object_id` );
-
+Have a look at the attached schema version mysql-db-nagios.sql and identify
+missings keys.
 
 
 3) Configure OpenPom
