--- a/i18n/messages-de_DE.po
+++ b/i18n/messages-de_DE.po
@@ -8,126 +8,270 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-09-05 16:21+0200\n"
+"POT-Creation-Date: 2013-09-06 00:00+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: German\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: ../status-event.php:66 ../status-event.php:108 ../status-nagios.php:377
-#: ../status-nagios.php:414
-msgid "on"
-msgstr "an"
-
-#: ../status-event.php:93 ../status-event.php:94 ../status-nagios.php:400
-#: ../status-nagios.php:401
-msgid "fixed"
-msgstr "Fix popup"
-
-#: ../status-event.php:102 ../status-nagios.php:409 ../query.php:879
-msgid "service"
-msgstr "Dienste"
-
-#: ../status-event.php:103 ../status-nagios.php:408
-msgid "machine"
-msgstr "Ger&auml;te"
-
-#: ../status-event.php:114
-msgid "curstat"
-msgstr "aktueller Status"
-
-#: ../status-event.php:120
-msgid "stinfo"
-msgstr "status-informationen"
-
-#: ../status-event.php:128
-msgid "chktyp"
-msgstr "pr&uuml;fe Typ"
-
-#: ../status-event.php:132 ../down.php:30
-msgid "start_time"
-msgstr "startzeit"
-
-#: ../status-event.php:136
-msgid "lastup"
-msgstr "letztes Aenderung"
-
-#: ../status-event.php:147 ../down.php:39
-msgid "end_down"
-msgstr "endet"
-
-#: ../status-event.php:160
-msgid "disabled_since"
-msgstr "Deaktiviert seit"
-
-#: ../showlog.php:49 ../history.php:75 ../action.php:238
+#: ../showlog.php:44 ../history.php:70 ../action.php:233
 msgid "next"
 msgstr "n&auml;chste Seite"
 
-#: ../showlog.php:55 ../history.php:82 ../action.php:230
+#: ../showlog.php:50 ../history.php:77 ../action.php:225
 msgid "prev"
 msgstr "vorherige Seite"
 
-#: ../showlog.php:68 ../showlog.php:78 ../history.php:90
+#: ../showlog.php:63 ../showlog.php:73 ../history.php:85
 msgid "history"
 msgstr "geschichte"
 
-#: ../status-nagios.php:66
+#: ../disable.php:18 ../query.php:805 ../action.php:58
+msgid "disable_title"
+msgstr "Benachrichtigung deaktivieren"
+
+#: ../disable.php:33 ../query.php:811 ../ack.php:32 ../comment.php:33
+#: ../down.php:60
+msgid "comment"
+msgstr "Kommentare"
+
+#: ../disable.php:54 ../ack.php:53 ../comment.php:54 ../down.php:82
+msgid "track"
+msgstr "Tracking"
+
+#: ../disable.php:59 ../ack.php:58 ../option.php:268 ../comment.php:59
+#: ../down.php:87
+msgid "cancel"
+msgstr "abbrechen"
+
+#: ../query.php:787 ../status-nagios.php:318
+msgid "service"
+msgstr "Dienste"
+
+#: ../query.php:791
+msgid "host"
+msgstr "Host"
+
+#: ../query.php:798
+msgid "graph_icon"
+msgstr "zeige Grafik"
+
+#: ../query.php:802 ../action.php:50 ../ack.php:18
+msgid "acknowledge"
+msgstr "best&auml;tigen"
+
+#: ../query.php:808 ../action.php:54 ../down.php:18
+msgid "downtime"
+msgstr "Ausfallzeit"
+
+#: ../alert.php:44
+msgid "notif_warning"
+msgstr "Warnung: Globale Benachrichtigungen sind deaktiviert!"
+
+#: ../history.php:95
+msgid "historyfor"
+msgstr "geschichte f&uuml;r"
+
+#: ../action.php:35
+msgid "refresh"
+msgstr "aktualisieren"
+
+#: ../action.php:38 ../action.php:248
+msgid "refreshing"
+msgstr "aktualisieren in"
+
+#: ../action.php:62 ../comment.php:18
+msgid "comment0"
+msgstr "Kommentar hinzuf&uuml;gen"
+
+#: ../action.php:66
+msgid "reset_title"
+msgstr "Best&auml;tigt, Ausfallzeit, Benachrichtigung und Kommentare zur&uuml;cksetzen"
+
+#: ../action.php:70
+msgid "recheck"
+msgstr "erneut pr&uuml;fen"
+
+#: ../action.php:89
+msgid "show_log"
+msgstr "Nagios LOG"
+
+#: ../action.php:93
+msgid "mode"
+msgstr "monitor mode"
+
+#: ../action.php:97 ../option.php:35
+msgid "option"
+msgstr "Optionen"
+
+#: ../action.php:119 ../action.php:166 ../option.php:91 ../option.php:98
+msgid "level"
+msgstr "Standard Level"
+
+#: ../action.php:135
+msgid "search"
+msgstr "suche &lt;schl&uuml;ssel&gt;:&lt;wert&gt;, betreiber: | & ! *"
+
+#: ../action.php:141
+msgid "vsearch"
+msgstr "suche starten"
+
+#: ../action.php:145
+msgid "clear"
+msgstr "leeren"
+
+#: ../action.php:165
+msgid "title"
+msgstr ""
+
+#: ../action.php:169 ../action.php:184
+msgid "meter"
+msgstr "Angezeigt/total Z&auml;hler: kritisch, Warnung, Unbekannte, Ok, best&auml;tigen, Ausfallzeit, meldung and pr&uuml;fe deaktivieren"
+
+#: ../action.php:251 ../option.php:57
+msgid "second"
+msgstr "Sekunden"
+
+#: ../action.php:255
+msgid "mode0"
+msgstr "ausfahrt monitor mode"
+
+#.
+#. OpenPOM
+#.
+#. Copyright 2010, Exosec
+#. Licensed under GPL Version 2.
+#. http://www.gnu.org/licenses/
+#.
+#: ../footer.php:18
+msgid "querytime"
+msgstr "Suche in"
+
+#: ../status-nagios.php:63
 msgid "no"
 msgstr "nein"
 
-#: ../status-nagios.php:67
+#: ../status-nagios.php:64
 msgid "yes"
 msgstr "ja"
 
-#: ../status-nagios.php:137
+#: ../status-nagios.php:134
 msgid "state_change"
 msgstr "Zustands&auml;nderung"
 
 #. DOWNSTATUS
-#: ../status-nagios.php:143
+#: ../status-nagios.php:140
 msgid "end"
 msgstr "endet"
 
-#: ../status-nagios.php:155
+#: ../status-nagios.php:149
 msgid "show_history"
 msgstr "Geschichte"
 
-#: ../status-nagios.php:449
+#: ../status-nagios.php:286 ../status-nagios.php:323
+msgid "on"
+msgstr "an"
+
+#: ../status-nagios.php:309 ../status-nagios.php:310
+msgid "fixed"
+msgstr "Fix popup"
+
+#: ../status-nagios.php:317
+msgid "machine"
+msgstr "Ger&auml;te"
+
+#: ../status-nagios.php:358
 msgid "titlemore"
 msgstr "zeigen mehr Informationen"
 
-#: ../status-nagios.php:449
+#: ../status-nagios.php:358
 msgid "more"
 msgstr "mehr"
 
-#: ../status-nagios.php:463
+#: ../status-nagios.php:372
 msgid "cvar"
 msgstr "Variable:"
 
-#: ../disable.php:24 ../query.php:897 ../action.php:58
-msgid "disable_title"
-msgstr "Benachrichtigung deaktivieren"
+#: ../option.php:51
+msgid "refreshing0"
+msgstr "aktualisiere alle"
 
-#: ../disable.php:39 ../query.php:903 ../ack.php:37 ../down.php:65
-#: ../comment.php:39
-msgid "comment"
-msgstr "Kommentare"
+#: ../option.php:63
+msgid "lang"
+msgstr "Sprache"
 
-#: ../disable.php:62 ../ack.php:60 ../down.php:89 ../comment.php:61
-msgid "track"
-msgstr "Tracking"
+#: ../option.php:81
+msgid "step"
+msgstr "Anzahl angezeigte Zeilen"
 
-#: ../disable.php:67 ../ack.php:65 ../option.php:271 ../down.php:94
-#: ../comment.php:66
-msgid "cancel"
-msgstr "abbrechen"
+#: ../option.php:112
+msgid "maxlen"
+msgstr "Maximale Anzahl Zeichen:"
 
-#: ../history.php:100
-msgid "historyfor"
-msgstr "geschichte f&uuml;r"
+#. end foreach column
+#: ../option.php:130
+msgid "fontsize"
+msgstr "Schriftgr&ouml;sse Alarm"
+
+#: ../option.php:141
+msgid "quicksearch"
+msgstr "schnellsuche"
+
+#: ../option.php:151
+msgid "statuspopin"
+msgstr "status popin: informationen"
+
+#: ../option.php:154
+msgid "statusall"
+msgstr "alle: "
+
+#: ../option.php:167
+msgid "statuslimit"
+msgstr "linien: "
+
+#: ../option.php:172
+msgid "showgraph"
+msgstr "graph: "
+
+#: ../option.php:181
+msgid "frame"
+msgstr "Frameumrandung ausblenden"
+
+#: ../option.php:191
+msgid "cols"
+msgstr "Anzuzeigenden Spalten"
+
+#: ../option.php:230
+msgid "historydisplay"
+msgstr "geschichte zur anzeige"
+
+#: ../option.php:272
+msgid "reset0"
+msgstr "zur&uuml;cksetzen"
+
+#: ../down.php:25
+msgid "start_time"
+msgstr "startzeit"
+
+#: ../down.php:34
+msgid "end_down"
+msgstr "endet"
+
+#: ../down.php:43
+msgid "durationnow"
+msgstr "Dauer von jetzt"
+
+#: ../down.php:49
+msgid "hour"
+msgstr "stunden"
+
+#: ../down.php:56
+msgid "minutes"
+msgstr "minutes"
 
 #.
 #. OpenPOM
@@ -143,170 +287,6 @@ msgstr "geplanten startzeit"
 #: ../query-history.php:52 ../query-history.php:195
 msgid "scheduled_end_time"
 msgstr "geplanten endzeit"
-
-#: ../query.php:883
-msgid "host"
-msgstr "Host"
-
-#: ../query.php:890
-msgid "graph_icon"
-msgstr "zeige Grafik"
-
-#: ../query.php:894 ../ack.php:23 ../action.php:50
-msgid "acknowledge"
-msgstr "best&auml;tigen"
-
-#: ../query.php:900 ../action.php:54 ../down.php:23
-msgid "downtime"
-msgstr "Ausfallzeit"
-
-#: ../alert.php:41
-msgid "notif_warning"
-msgstr "Warnung: Globale Benachrichtigungen sind deaktiviert!"
-
-#: ../action.php:35
-msgid "refresh"
-msgstr "aktualisieren"
-
-#: ../action.php:38 ../action.php:253
-msgid "refreshing"
-msgstr "aktualisieren in"
-
-#: ../action.php:62 ../comment.php:24
-msgid "comment0"
-msgstr "Kommentar hinzuf&uuml;gen"
-
-#: ../action.php:66
-msgid "reset_title"
-msgstr "Best&auml;tigt, Ausfallzeit, Benachrichtigung und Kommentare zur&uuml;cksetzen"
-
-#: ../action.php:70
-msgid "recheck"
-msgstr "erneut pr&uuml;fen"
-
-#: ../action.php:94
-msgid "show_log"
-msgstr "Nagios LOG"
-
-#: ../action.php:98
-msgid "mode"
-msgstr "monitor mode"
-
-#: ../action.php:102 ../option.php:37
-msgid "option"
-msgstr "Optionen"
-
-#: ../action.php:124 ../action.php:171 ../option.php:93 ../option.php:100
-msgid "level"
-msgstr "Standard Level"
-
-#: ../action.php:140
-msgid "search"
-msgstr "suche &lt;schl&uuml;ssel&gt;:&lt;wert&gt;, betreiber: | & ! *"
-
-#: ../action.php:146
-msgid "vsearch"
-msgstr "suche starten"
-
-#: ../action.php:150
-msgid "clear"
-msgstr "leeren"
-
-#: ../action.php:170
-msgid "title"
-msgstr ""
-
-#: ../action.php:174 ../action.php:189
-msgid "meter"
-msgstr "Angezeigt/total Z&auml;hler: kritisch, Warnung, Unbekannte, Ok, best&auml;tigen, Ausfallzeit, meldung and pr&uuml;fe deaktivieren"
-
-#: ../action.php:256 ../option.php:59
-msgid "second"
-msgstr "Sekunden"
-
-#: ../action.php:260
-msgid "mode0"
-msgstr "ausfahrt monitor mode"
-
-#: ../option.php:53
-msgid "refreshing0"
-msgstr "aktualisiere alle"
-
-#: ../option.php:65
-msgid "lang"
-msgstr "Sprache"
-
-#: ../option.php:83
-msgid "step"
-msgstr "Anzahl angezeigte Zeilen"
-
-#: ../option.php:114
-msgid "maxlen"
-msgstr "Maximale Anzahl Zeichen:"
-
-#. end foreach column
-#: ../option.php:132
-msgid "fontsize"
-msgstr "Schriftgr&ouml;sse Alarm"
-
-#: ../option.php:143
-msgid "quicksearch"
-msgstr "schnellsuche"
-
-#: ../option.php:153
-msgid "statuspopin"
-msgstr "status popin: informationen"
-
-#: ../option.php:156
-msgid "statusall"
-msgstr "alle: "
-
-#: ../option.php:169
-msgid "statuslimit"
-msgstr "linien: "
-
-#: ../option.php:174
-msgid "showgraph"
-msgstr "graph: "
-
-#: ../option.php:183
-msgid "frame"
-msgstr "Frameumrandung ausblenden"
-
-#: ../option.php:193
-msgid "cols"
-msgstr "Anzuzeigenden Spalten"
-
-#: ../option.php:232
-msgid "historydisplay"
-msgstr "geschichte zur anzeige"
-
-#: ../option.php:275
-msgid "reset0"
-msgstr "zur&uuml;cksetzen"
-
-#.
-#. OpenPOM
-#.
-#. Copyright 2010, Exosec
-#. Licensed under GPL Version 2.
-#. http://www.gnu.org/licenses/
-#.
-#: ../footer.php:16
-msgid "querytime"
-msgstr "Suche in"
-
-#: ../down.php:48
-msgid "durationnow"
-msgstr "Dauer von jetzt"
-
-#: ../down.php:54
-msgid "hour"
-msgstr "stunden"
-
-#: ../down.php:61
-msgid "minutes"
-msgstr "minutes"
 
 # ------ Entry added by addentry.sh ------
 msgid "disable"
@@ -420,12 +400,6 @@ msgstr "Zustand"
 msgid "group"
 msgstr "Gruppen"
 
-msgid "last"
-msgstr "letzte pr&uuml;fe"
-
-msgid "duration"
-msgstr "Dauer"
-
 msgid "reload"
 msgstr ""
 
@@ -516,9 +490,6 @@ msgstr "kontakt"
 msgid "contact_address"
 msgstr "kontakt adresse"
 
-msgid "output"
-msgstr "daten"
-
 msgid "nohistory"
 msgstr "keine"
 
@@ -563,3 +534,33 @@ msgstr "Letzte &auml;nderung | Letztes Aenderung"
 
 msgid "graph"
 msgstr "graph"
+
+msgid "col_hostname"
+msgstr "Ger&auml;te"
+
+msgid "col_address"
+msgstr "IP"
+
+msgid "col_service"
+msgstr "Dienste"
+
+msgid "col_groups"
+msgstr "Gruppen"
+
+msgid "col_output"
+msgstr "status-informationen"
+
+msgid "col_last"
+msgstr "letzte pr&uuml;fe"
+
+msgid "col_duration"
+msgstr "Dauer"
+
+msgid "col_client"
+msgstr "Kunde"
+
+msgid "col_timeleft"
+msgstr "Zeit &uuml;brig"
+
+msgid "curstat"
+msgstr "aktueller Status"
