--- a/i18n/messages-en_US.po
+++ b/i18n/messages-en_US.po
@@ -8,126 +8,270 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-09-05 16:21+0200\n"
+"POT-Creation-Date: 2013-09-06 00:00+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: English\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: ../status-event.php:66 ../status-event.php:108 ../status-nagios.php:377
-#: ../status-nagios.php:414
-msgid "on"
-msgstr "on"
-
-#: ../status-event.php:93 ../status-event.php:94 ../status-nagios.php:400
-#: ../status-nagios.php:401
-msgid "fixed"
-msgstr "Fix popup"
-
-#: ../status-event.php:102 ../status-nagios.php:409 ../query.php:879
-msgid "service"
-msgstr "service"
-
-#: ../status-event.php:103 ../status-nagios.php:408
-msgid "machine"
-msgstr "equipment"
-
-#: ../status-event.php:114
-msgid "curstat"
-msgstr "current status"
-
-#: ../status-event.php:120
-msgid "stinfo"
-msgstr "status information"
-
-#: ../status-event.php:128
-msgid "chktyp"
-msgstr "check type"
-
-#: ../status-event.php:132 ../down.php:30
-msgid "start_time"
-msgstr "start time"
-
-#: ../status-event.php:136
-msgid "lastup"
-msgstr "last update"
-
-#: ../status-event.php:147 ../down.php:39
-msgid "end_down"
-msgstr "end time"
-
-#: ../status-event.php:160
-msgid "disabled_since"
-msgstr "disabled since"
-
-#: ../showlog.php:49 ../history.php:75 ../action.php:238
+#: ../showlog.php:44 ../history.php:70 ../action.php:233
 msgid "next"
 msgstr "next page"
 
-#: ../showlog.php:55 ../history.php:82 ../action.php:230
+#: ../showlog.php:50 ../history.php:77 ../action.php:225
 msgid "prev"
 msgstr "previous page"
 
-#: ../showlog.php:68 ../showlog.php:78 ../history.php:90
+#: ../showlog.php:63 ../showlog.php:73 ../history.php:85
 msgid "history"
 msgstr "history"
 
-#: ../status-nagios.php:66
+#: ../disable.php:18 ../query.php:805 ../action.php:58
+msgid "disable_title"
+msgstr "disable notifications"
+
+#: ../disable.php:33 ../query.php:811 ../ack.php:32 ../comment.php:33
+#: ../down.php:60
+msgid "comment"
+msgstr "comment"
+
+#: ../disable.php:54 ../ack.php:53 ../comment.php:54 ../down.php:82
+msgid "track"
+msgstr "Enable tracking"
+
+#: ../disable.php:59 ../ack.php:58 ../option.php:268 ../comment.php:59
+#: ../down.php:87
+msgid "cancel"
+msgstr "cancel"
+
+#: ../query.php:787 ../status-nagios.php:318
+msgid "service"
+msgstr "service"
+
+#: ../query.php:791
+msgid "host"
+msgstr "host"
+
+#: ../query.php:798
+msgid "graph_icon"
+msgstr "show graph"
+
+#: ../query.php:802 ../action.php:50 ../ack.php:18
+msgid "acknowledge"
+msgstr "acknowledge"
+
+#: ../query.php:808 ../action.php:54 ../down.php:18
+msgid "downtime"
+msgstr "downtime"
+
+#: ../alert.php:44
+msgid "notif_warning"
+msgstr "Warning: global notifications are disabled!"
+
+#: ../history.php:95
+msgid "historyfor"
+msgstr "history for"
+
+#: ../action.php:35
+msgid "refresh"
+msgstr "refresh"
+
+#: ../action.php:38 ../action.php:248
+msgid "refreshing"
+msgstr "refresh in"
+
+#: ../action.php:62 ../comment.php:18
+msgid "comment0"
+msgstr "add comment"
+
+#: ../action.php:66
+msgid "reset_title"
+msgstr "reset acknowledge, downtime, notification and comments"
+
+#: ../action.php:70
+msgid "recheck"
+msgstr "recheck"
+
+#: ../action.php:89
+msgid "show_log"
+msgstr "Nagios LOG"
+
+#: ../action.php:93
+msgid "mode"
+msgstr "monitor mode"
+
+#: ../action.php:97 ../option.php:35
+msgid "option"
+msgstr "options"
+
+#: ../action.php:119 ../action.php:166 ../option.php:91 ../option.php:98
+msgid "level"
+msgstr "default level"
+
+#: ../action.php:135
+msgid "search"
+msgstr "search &lt;key&gt;:&lt;value&gt;, operators: | & ! *"
+
+#: ../action.php:141
+msgid "vsearch"
+msgstr "launch search"
+
+#: ../action.php:145
+msgid "clear"
+msgstr "clear"
+
+#: ../action.php:165
+msgid "title"
+msgstr ""
+
+#: ../action.php:169 ../action.php:184
+msgid "meter"
+msgstr "displayed/total counters: critical, warning, unknown, ok, acknowledge, downtime, disable notify and check"
+
+#: ../action.php:251 ../option.php:57
+msgid "second"
+msgstr "seconds"
+
+#: ../action.php:255
+msgid "mode0"
+msgstr "stop monitor mode"
+
+#.
+#. OpenPOM
+#.
+#. Copyright 2010, Exosec
+#. Licensed under GPL Version 2.
+#. http://www.gnu.org/licenses/
+#.
+#: ../footer.php:18
+msgid "querytime"
+msgstr "query in"
+
+#: ../status-nagios.php:63
 msgid "no"
 msgstr "no"
 
-#: ../status-nagios.php:67
+#: ../status-nagios.php:64
 msgid "yes"
 msgstr "yes"
 
-#: ../status-nagios.php:137
+#: ../status-nagios.php:134
 msgid "state_change"
 msgstr "state change"
 
 #. DOWNSTATUS
-#: ../status-nagios.php:143
+#: ../status-nagios.php:140
 msgid "end"
 msgstr "end"
 
-#: ../status-nagios.php:155
+#: ../status-nagios.php:149
 msgid "show_history"
 msgstr "full history"
 
-#: ../status-nagios.php:449
+#: ../status-nagios.php:286 ../status-nagios.php:323
+msgid "on"
+msgstr "on"
+
+#: ../status-nagios.php:309 ../status-nagios.php:310
+msgid "fixed"
+msgstr "Fix popup"
+
+#: ../status-nagios.php:317
+msgid "machine"
+msgstr "equipment"
+
+#: ../status-nagios.php:358
 msgid "titlemore"
 msgstr "show more information"
 
-#: ../status-nagios.php:449
+#: ../status-nagios.php:358
 msgid "more"
 msgstr "more"
 
-#: ../status-nagios.php:463
+#: ../status-nagios.php:372
 msgid "cvar"
 msgstr "variable:"
 
-#: ../disable.php:24 ../query.php:897 ../action.php:58
-msgid "disable_title"
-msgstr "disable notifications"
+#: ../option.php:51
+msgid "refreshing0"
+msgstr "refreshing every"
 
-#: ../disable.php:39 ../query.php:903 ../ack.php:37 ../down.php:65
-#: ../comment.php:39
-msgid "comment"
-msgstr "comment"
+#: ../option.php:63
+msgid "lang"
+msgstr "language"
 
-#: ../disable.php:62 ../ack.php:60 ../down.php:89 ../comment.php:61
-msgid "track"
-msgstr "Enable tracking"
+#: ../option.php:81
+msgid "step"
+msgstr "number of displayed lines"
 
-#: ../disable.php:67 ../ack.php:65 ../option.php:271 ../down.php:94
-#: ../comment.php:66
-msgid "cancel"
-msgstr "cancel"
+#: ../option.php:112
+msgid "maxlen"
+msgstr "Max characters:"
 
-#: ../history.php:100
-msgid "historyfor"
-msgstr "history for"
+#. end foreach column
+#: ../option.php:130
+msgid "fontsize"
+msgstr "Font size alert"
+
+#: ../option.php:141
+msgid "quicksearch"
+msgstr "quick search"
+
+#: ../option.php:151
+msgid "statuspopin"
+msgstr "Status popin: information"
+
+#: ../option.php:154
+msgid "statusall"
+msgstr "all: "
+
+#: ../option.php:167
+msgid "statuslimit"
+msgstr "lines: "
+
+#: ../option.php:172
+msgid "showgraph"
+msgstr "graph: "
+
+#: ../option.php:181
+msgid "frame"
+msgstr "no frame around the page"
+
+#: ../option.php:191
+msgid "cols"
+msgstr "columns to display"
+
+#: ../option.php:230
+msgid "historydisplay"
+msgstr "history to display"
+
+#: ../option.php:272
+msgid "reset0"
+msgstr "reset"
+
+#: ../down.php:25
+msgid "start_time"
+msgstr "start time"
+
+#: ../down.php:34
+msgid "end_down"
+msgstr "end time"
+
+#: ../down.php:43
+msgid "durationnow"
+msgstr "duration from now"
+
+#: ../down.php:49
+msgid "hour"
+msgstr "hours"
+
+#: ../down.php:56
+msgid "minutes"
+msgstr "minutes"
 
 #.
 #. OpenPOM
@@ -143,170 +287,6 @@ msgstr "start"
 #: ../query-history.php:52 ../query-history.php:195
 msgid "scheduled_end_time"
 msgstr "end"
-
-#: ../query.php:883
-msgid "host"
-msgstr "host"
-
-#: ../query.php:890
-msgid "graph_icon"
-msgstr "show graph"
-
-#: ../query.php:894 ../ack.php:23 ../action.php:50
-msgid "acknowledge"
-msgstr "acknowledge"
-
-#: ../query.php:900 ../action.php:54 ../down.php:23
-msgid "downtime"
-msgstr "downtime"
-
-#: ../alert.php:41
-msgid "notif_warning"
-msgstr "Warning: global notifications are disabled!"
-
-#: ../action.php:35
-msgid "refresh"
-msgstr "refresh"
-
-#: ../action.php:38 ../action.php:253
-msgid "refreshing"
-msgstr "refresh in"
-
-#: ../action.php:62 ../comment.php:24
-msgid "comment0"
-msgstr "add comment"
-
-#: ../action.php:66
-msgid "reset_title"
-msgstr "reset acknowledge, downtime, notification and comments"
-
-#: ../action.php:70
-msgid "recheck"
-msgstr "recheck"
-
-#: ../action.php:94
-msgid "show_log"
-msgstr "Nagios LOG"
-
-#: ../action.php:98
-msgid "mode"
-msgstr "monitor mode"
-
-#: ../action.php:102 ../option.php:37
-msgid "option"
-msgstr "options"
-
-#: ../action.php:124 ../action.php:171 ../option.php:93 ../option.php:100
-msgid "level"
-msgstr "default level"
-
-#: ../action.php:140
-msgid "search"
-msgstr "search &lt;key&gt;:&lt;value&gt;, operators: | & ! *"
-
-#: ../action.php:146
-msgid "vsearch"
-msgstr "launch search"
-
-#: ../action.php:150
-msgid "clear"
-msgstr "clear"
-
-#: ../action.php:170
-msgid "title"
-msgstr ""
-
-#: ../action.php:174 ../action.php:189
-msgid "meter"
-msgstr "displayed/total counters: critical, warning, unknown, ok, acknowledge, downtime, disable notify and check"
-
-#: ../action.php:256 ../option.php:59
-msgid "second"
-msgstr "seconds"
-
-#: ../action.php:260
-msgid "mode0"
-msgstr "stop monitor mode"
-
-#: ../option.php:53
-msgid "refreshing0"
-msgstr "refreshing every"
-
-#: ../option.php:65
-msgid "lang"
-msgstr "language"
-
-#: ../option.php:83
-msgid "step"
-msgstr "number of displayed lines"
-
-#: ../option.php:114
-msgid "maxlen"
-msgstr "Max characters:"
-
-#. end foreach column
-#: ../option.php:132
-msgid "fontsize"
-msgstr "Font size alert"
-
-#: ../option.php:143
-msgid "quicksearch"
-msgstr "quick search"
-
-#: ../option.php:153
-msgid "statuspopin"
-msgstr "Status popin: information"
-
-#: ../option.php:156
-msgid "statusall"
-msgstr "all: "
-
-#: ../option.php:169
-msgid "statuslimit"
-msgstr "lines: "
-
-#: ../option.php:174
-msgid "showgraph"
-msgstr "graph: "
-
-#: ../option.php:183
-msgid "frame"
-msgstr "no frame around the page"
-
-#: ../option.php:193
-msgid "cols"
-msgstr "columns to display"
-
-#: ../option.php:232
-msgid "historydisplay"
-msgstr "history to display"
-
-#: ../option.php:275
-msgid "reset0"
-msgstr "reset"
-
-#.
-#. OpenPOM
-#.
-#. Copyright 2010, Exosec
-#. Licensed under GPL Version 2.
-#. http://www.gnu.org/licenses/
-#.
-#: ../footer.php:16
-msgid "querytime"
-msgstr "query in"
-
-#: ../down.php:48
-msgid "durationnow"
-msgstr "duration from now"
-
-#: ../down.php:54
-msgid "hour"
-msgstr "hours"
-
-#: ../down.php:61
-msgid "minutes"
-msgstr "minutes"
 
 # ------ Entry added by addentry.sh ------
 msgid "disable"
@@ -420,12 +400,6 @@ msgstr "flags"
 msgid "group"
 msgstr "group"
 
-msgid "last"
-msgstr "last check"
-
-msgid "duration"
-msgstr "duration"
-
 msgid "reload"
 msgstr ""
 
@@ -516,9 +490,6 @@ msgstr "contact"
 msgid "contact_address"
 msgstr "contact address"
 
-msgid "output"
-msgstr "data"
-
 msgid "nohistory"
 msgstr "no"
 
@@ -563,3 +534,33 @@ msgstr "last state change | Last update"
 
 msgid "graph"
 msgstr "graph"
+
+msgid "col_hostname"
+msgstr "equipment"
+
+msgid "col_address"
+msgstr "IP"
+
+msgid "col_service"
+msgstr "service"
+
+msgid "col_groups"
+msgstr "groups"
+
+msgid "col_output"
+msgstr "status information"
+
+msgid "col_last"
+msgstr "last check"
+
+msgid "col_duration"
+msgstr "duration"
+
+msgid "col_client"
+msgstr "customer"
+
+msgid "col_timeleft"
+msgstr "time left"
+
+msgid "curstat"
+msgstr "current status"
