--- a/i18n/messages-fr_FR.po
+++ b/i18n/messages-fr_FR.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-09-05 16:21+0200\n"
+"POT-Creation-Date: 2013-09-06 00:00+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: French\n"
@@ -18,118 +18,260 @@ msgstr ""
 "Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: ../status-event.php:66 ../status-event.php:108 ../status-nagios.php:377
-#: ../status-nagios.php:414
-msgid "on"
-msgstr "sur"
-
-#: ../status-event.php:93 ../status-event.php:94 ../status-nagios.php:400
-#: ../status-nagios.php:401
-msgid "fixed"
-msgstr "Fixer en popup"
-
-#: ../status-event.php:102 ../status-nagios.php:409 ../query.php:879
-msgid "service"
-msgstr "service"
-
-#: ../status-event.php:103 ../status-nagios.php:408
-msgid "machine"
-msgstr "equipement"
-
-#: ../status-event.php:114
-msgid "curstat"
-msgstr "etat actuel"
-
-#: ../status-event.php:120
-msgid "stinfo"
-msgstr "Information"
-
-#: ../status-event.php:128
-msgid "chktyp"
-msgstr "type de test"
-
-#: ../status-event.php:132 ../down.php:30
-msgid "start_time"
-msgstr "d&eacute;but"
-
-#: ../status-event.php:136
-msgid "lastup"
-msgstr "mise &agrave; jour"
-
-#: ../status-event.php:147 ../down.php:39
-msgid "end_down"
-msgstr "fin pr&eacute;vue"
-
-#: ../status-event.php:160
-msgid "disabled_since"
-msgstr "d&eacute;sactiv&eacute;es depuis"
-
-#: ../showlog.php:49 ../history.php:75 ../action.php:238
+#: ../showlog.php:44 ../history.php:70 ../action.php:233
 msgid "next"
 msgstr "page suivante"
 
-#: ../showlog.php:55 ../history.php:82 ../action.php:230
+#: ../showlog.php:50 ../history.php:77 ../action.php:225
 msgid "prev"
 msgstr "page pr&eacute;c&eacute;dente"
 
-#: ../showlog.php:68 ../showlog.php:78 ../history.php:90
+#: ../showlog.php:63 ../showlog.php:73 ../history.php:85
 msgid "history"
 msgstr "historique"
 
-#: ../status-nagios.php:66
+#: ../disable.php:18 ../query.php:805 ../action.php:58
+msgid "disable_title"
+msgstr "d&eacute;sactiver les notifications"
+
+#: ../disable.php:33 ../query.php:811 ../ack.php:32 ../comment.php:33
+#: ../down.php:60
+msgid "comment"
+msgstr "commentaire"
+
+#: ../disable.php:54 ../ack.php:53 ../comment.php:54 ../down.php:82
+msgid "track"
+msgstr "Activer le suivi"
+
+#: ../disable.php:59 ../ack.php:58 ../option.php:268 ../comment.php:59
+#: ../down.php:87
+msgid "cancel"
+msgstr "annuler"
+
+#: ../query.php:787 ../status-nagios.php:318
+msgid "service"
+msgstr "service"
+
+#: ../query.php:791
+msgid "host"
+msgstr "h&ocirc;te"
+
+#: ../query.php:798
+msgid "graph_icon"
+msgstr "affiche les graphes"
+
+#: ../query.php:802 ../action.php:50 ../ack.php:18
+msgid "acknowledge"
+msgstr "acquitter"
+
+#: ../query.php:808 ../action.php:54 ../down.php:18
+msgid "downtime"
+msgstr "arr&ecirc;t pr&eacute;vu"
+
+#: ../alert.php:44
+msgid "notif_warning"
+msgstr "Attention : les notifications globales sont d&eacute;sactiv&eacute;es !"
+
+#: ../history.php:95
+msgid "historyfor"
+msgstr "historique pour"
+
+#: ../action.php:35
+msgid "refresh"
+msgstr "rafra&icirc;chir"
+
+#: ../action.php:38 ../action.php:248
+msgid "refreshing"
+msgstr "rafra&icirc;chissement dans"
+
+#: ../action.php:62 ../comment.php:18
+msgid "comment0"
+msgstr "ajout commentaire"
+
+#: ../action.php:66
+msgid "reset_title"
+msgstr "R&eacute;initialiser les acquittements, arr&ecirc;t pr&eacute;vu, notifications et commentaires"
+
+#: ../action.php:70
+msgid "recheck"
+msgstr "retester"
+
+#: ../action.php:89
+msgid "show_log"
+msgstr "Nagios LOG"
+
+#: ../action.php:93
+msgid "mode"
+msgstr "mode moniteur"
+
+#: ../action.php:97 ../option.php:35
+msgid "option"
+msgstr "param&egrave;tres"
+
+#: ../action.php:119 ../action.php:166 ../option.php:91 ../option.php:98
+msgid "level"
+msgstr "niveau par d&eacute;faut affich&eacute;"
+
+#: ../action.php:135
+msgid "search"
+msgstr "recherche &lt;cl&eacute;&gt;:&lt;valeur&gt;, op&eacute;rateurs : | & ! *"
+
+#: ../action.php:141
+msgid "vsearch"
+msgstr "lancer la recherche"
+
+#: ../action.php:145
+msgid "clear"
+msgstr "effacer"
+
+#: ../action.php:165
+msgid "title"
+msgstr ""
+
+#: ../action.php:169 ../action.php:184
+msgid "meter"
+msgstr "compteurs affich&eacute;/total: critique, avertissement, inconnu, correct, acquitt&eacute, arr&ecirc;t pr&eacute;vu, notification et test d&eacute;sactiv&eacute;"
+
+#: ../action.php:251 ../option.php:57
+msgid "second"
+msgstr "secondes"
+
+#: ../action.php:255
+msgid "mode0"
+msgstr "quitter le mode moniteur"
+
+#.
+#. OpenPOM
+#.
+#. Copyright 2010, Exosec
+#. Licensed under GPL Version 2.
+#. http://www.gnu.org/licenses/
+#.
+#: ../footer.php:18
+msgid "querytime"
+msgstr "requ&ecirc;te en"
+
+#: ../status-nagios.php:63
 msgid "no"
 msgstr "non"
 
-#: ../status-nagios.php:67
+#: ../status-nagios.php:64
 msgid "yes"
 msgstr "oui"
 
-#: ../status-nagios.php:137
+#: ../status-nagios.php:134
 msgid "state_change"
 msgstr "changement d &eacute;tat"
 
 #. DOWNSTATUS
-#: ../status-nagios.php:143
+#: ../status-nagios.php:140
 msgid "end"
 msgstr "fin"
 
-#: ../status-nagios.php:155
+#: ../status-nagios.php:149
 msgid "show_history"
 msgstr "historique"
 
-#: ../status-nagios.php:449
+#: ../status-nagios.php:286 ../status-nagios.php:323
+msgid "on"
+msgstr "sur"
+
+#: ../status-nagios.php:309 ../status-nagios.php:310
+msgid "fixed"
+msgstr "Fixer en popup"
+
+#: ../status-nagios.php:317
+msgid "machine"
+msgstr "equipement"
+
+#: ../status-nagios.php:358
 msgid "titlemore"
 msgstr "voir plus d information"
 
-#: ../status-nagios.php:449
+#: ../status-nagios.php:358
 msgid "more"
 msgstr "plus"
 
-#: ../status-nagios.php:463
+#: ../status-nagios.php:372
 msgid "cvar"
 msgstr "variable :"
 
-#: ../disable.php:24 ../query.php:897 ../action.php:58
-msgid "disable_title"
-msgstr "d&eacute;sactiver les notifications"
+#: ../option.php:51
+msgid "refreshing0"
+msgstr "rafra&icirc;chissement toutes les"
 
-#: ../disable.php:39 ../query.php:903 ../ack.php:37 ../down.php:65
-#: ../comment.php:39
-msgid "comment"
-msgstr "commentaire"
+#: ../option.php:63
+msgid "lang"
+msgstr "langue"
 
-#: ../disable.php:62 ../ack.php:60 ../down.php:89 ../comment.php:61
-msgid "track"
-msgstr "Activer le suivi"
+#: ../option.php:81
+msgid "step"
+msgstr "nombre de lignes affich&eacute;es"
 
-#: ../disable.php:67 ../ack.php:65 ../option.php:271 ../down.php:94
-#: ../comment.php:66
-msgid "cancel"
-msgstr "annuler"
+#: ../option.php:112
+msgid "maxlen"
+msgstr "nb. de carat&egrave;res max :"
 
-#: ../history.php:100
-msgid "historyfor"
-msgstr "historique pour"
+#. end foreach column
+#: ../option.php:130
+msgid "fontsize"
+msgstr "Taille de la police des alertes"
+
+#: ../option.php:141
+msgid "quicksearch"
+msgstr "recherche rapide"
+
+#: ../option.php:151
+msgid "statuspopin"
+msgstr "popin de statut: information"
+
+#: ../option.php:154
+msgid "statusall"
+msgstr "toutes: "
+
+#: ../option.php:167
+msgid "statuslimit"
+msgstr "lignes: "
+
+#: ../option.php:172
+msgid "showgraph"
+msgstr "graphe: "
+
+#: ../option.php:181
+msgid "frame"
+msgstr "pas de cadre autour de la page"
+
+#: ../option.php:191
+msgid "cols"
+msgstr "Colonnes &agrave; afficher"
+
+#: ../option.php:230
+msgid "historydisplay"
+msgstr "historique &agrave; afficher"
+
+#: ../option.php:272
+msgid "reset0"
+msgstr "R&eacute;initialiser"
+
+#: ../down.php:25
+msgid "start_time"
+msgstr "d&eacute;but"
+
+#: ../down.php:34
+msgid "end_down"
+msgstr "fin pr&eacute;vue"
+
+#: ../down.php:43
+msgid "durationnow"
+msgstr "Dur&eacute;e"
+
+#: ../down.php:49
+msgid "hour"
+msgstr "heures"
+
+#: ../down.php:56
+msgid "minutes"
+msgstr "minutes"
 
 #.
 #. OpenPOM
@@ -145,170 +287,6 @@ msgstr "d&eacute;but"
 #: ../query-history.php:52 ../query-history.php:195
 msgid "scheduled_end_time"
 msgstr "fin"
-
-#: ../query.php:883
-msgid "host"
-msgstr "h&ocirc;te"
-
-#: ../query.php:890
-msgid "graph_icon"
-msgstr "affiche les graphes"
-
-#: ../query.php:894 ../ack.php:23 ../action.php:50
-msgid "acknowledge"
-msgstr "acquitter"
-
-#: ../query.php:900 ../action.php:54 ../down.php:23
-msgid "downtime"
-msgstr "arr&ecirc;t pr&eacute;vu"
-
-#: ../alert.php:41
-msgid "notif_warning"
-msgstr "Attention : les notifications globales sont d&eacute;sactiv&eacute;es !"
-
-#: ../action.php:35
-msgid "refresh"
-msgstr "rafra&icirc;chir"
-
-#: ../action.php:38 ../action.php:253
-msgid "refreshing"
-msgstr "rafra&icirc;chissement dans"
-
-#: ../action.php:62 ../comment.php:24
-msgid "comment0"
-msgstr "ajout commentaire"
-
-#: ../action.php:66
-msgid "reset_title"
-msgstr "R&eacute;initialiser les acquittements, arr&ecirc;t pr&eacute;vu, notifications et commentaires"
-
-#: ../action.php:70
-msgid "recheck"
-msgstr "retester"
-
-#: ../action.php:94
-msgid "show_log"
-msgstr "Nagios LOG"
-
-#: ../action.php:98
-msgid "mode"
-msgstr "mode moniteur"
-
-#: ../action.php:102 ../option.php:37
-msgid "option"
-msgstr "param&egrave;tres"
-
-#: ../action.php:124 ../action.php:171 ../option.php:93 ../option.php:100
-msgid "level"
-msgstr "niveau par d&eacute;faut affich&eacute;"
-
-#: ../action.php:140
-msgid "search"
-msgstr "recherche &lt;cl&eacute;&gt;:&lt;valeur&gt;, op&eacute;rateurs : | & ! *"
-
-#: ../action.php:146
-msgid "vsearch"
-msgstr "lancer la recherche"
-
-#: ../action.php:150
-msgid "clear"
-msgstr "effacer"
-
-#: ../action.php:170
-msgid "title"
-msgstr ""
-
-#: ../action.php:174 ../action.php:189
-msgid "meter"
-msgstr "compteurs affich&eacute;/total: critique, avertissement, inconnu, correct, acquitt&eacute, arr&ecirc;t pr&eacute;vu, notification et test d&eacute;sactiv&eacute;"
-
-#: ../action.php:256 ../option.php:59
-msgid "second"
-msgstr "secondes"
-
-#: ../action.php:260
-msgid "mode0"
-msgstr "quitter le mode moniteur"
-
-#: ../option.php:53
-msgid "refreshing0"
-msgstr "rafra&icirc;chissement toutes les"
-
-#: ../option.php:65
-msgid "lang"
-msgstr "langue"
-
-#: ../option.php:83
-msgid "step"
-msgstr "nombre de lignes affich&eacute;es"
-
-#: ../option.php:114
-msgid "maxlen"
-msgstr "nb. de carat&egrave;res max :"
-
-#. end foreach column
-#: ../option.php:132
-msgid "fontsize"
-msgstr "Taille de la police des alertes"
-
-#: ../option.php:143
-msgid "quicksearch"
-msgstr "recherche rapide"
-
-#: ../option.php:153
-msgid "statuspopin"
-msgstr "popin de statut: information"
-
-#: ../option.php:156
-msgid "statusall"
-msgstr "toutes: "
-
-#: ../option.php:169
-msgid "statuslimit"
-msgstr "lignes: "
-
-#: ../option.php:174
-msgid "showgraph"
-msgstr "graphe: "
-
-#: ../option.php:183
-msgid "frame"
-msgstr "pas de cadre autour de la page"
-
-#: ../option.php:193
-msgid "cols"
-msgstr "Colonnes &agrave; afficher"
-
-#: ../option.php:232
-msgid "historydisplay"
-msgstr "historique &agrave; afficher"
-
-#: ../option.php:275
-msgid "reset0"
-msgstr "R&eacute;initialiser"
-
-#.
-#. OpenPOM
-#.
-#. Copyright 2010, Exosec
-#. Licensed under GPL Version 2.
-#. http://www.gnu.org/licenses/
-#.
-#: ../footer.php:16
-msgid "querytime"
-msgstr "requ&ecirc;te en"
-
-#: ../down.php:48
-msgid "durationnow"
-msgstr "Dur&eacute;e"
-
-#: ../down.php:54
-msgid "hour"
-msgstr "heures"
-
-#: ../down.php:61
-msgid "minutes"
-msgstr "minutes"
 
 # ------ Entry added by addentry.sh ------
 msgid "disable"
@@ -422,12 +400,6 @@ msgstr "Etat"
 msgid "group"
 msgstr "groupe"
 
-msgid "last"
-msgstr "dernier test"
-
-msgid "duration"
-msgstr "dur&eacute;e"
-
 msgid "reload"
 msgstr ""
 
@@ -518,9 +490,6 @@ msgstr "contact"
 msgid "contact_address"
 msgstr "adresse du contact"
 
-msgid "output"
-msgstr "donn&eacute;es"
-
 msgid "nohistory"
 msgstr "aucun"
 
@@ -565,3 +534,33 @@ msgstr "changement d &eacute;tat | Mise &agrave; jour"
 
 msgid "graph"
 msgstr "graphe"
+
+msgid "col_hostname"
+msgstr "equipement"
+
+msgid "col_address"
+msgstr "IP"
+
+msgid "col_service"
+msgstr "service"
+
+msgid "col_groups"
+msgstr "groupes"
+
+msgid "col_output"
+msgstr "information"
+
+msgid "col_last"
+msgstr "dernier test"
+
+msgid "col_duration"
+msgstr "duration"
+
+msgid "col_client"
+msgstr "client"
+
+msgid "col_timeleft"
+msgstr "temps restant"
+
+msgid "curstat"
+msgstr "etat actuel"
