BUG/MINOR: Fix missing translation in French

--- a/i18n/messages-fr_FR.po
+++ b/i18n/messages-fr_FR.po
@@ -554,7 +554,7 @@ msgid "col_last"
 msgstr "dernier test"
 
 msgid "col_duration"
-msgstr "duration"
+msgstr "dur&eacute;e"
 
 msgid "col_client"
 msgstr "client"
