BUG/MINOR: i18n: Fix translation of "next check" in status popin
This bug was around for a little while. There was two possibilities
to fix it, the 2nd one was choosen in order to avoid a change in
config.php:

1) Modify the $STATUSDATA array in status-nagios.php and rename the
   "nextcheck" to "next_check" because the later corresponds to a
   gettext msgid present in PO files. This implies to update the
   $STATUSPOPIN variable accordingly in config.php and we should
   avoid changes in that file as much as possible in minor release.

2) Fix the msgid in PO files, rename "next_check" to "nextcheck".
   This method causes more changes. However those are only for i18n
   files and thus it does't imply changes in config.php.

--- a/i18n/messages-de_DE.po
+++ b/i18n/messages-de_DE.po
@@ -454,7 +454,7 @@ msgstr "Status popin aktivieren"
 msgid "disa_popin"
 msgstr "Status popin deaktivieren"
 
-msgid "next_check"
+msgid "nextcheck"
 msgstr "nachste check"
 
 msgid "linkhistory"
