--- a/i18n/messages-en_US.po
+++ b/i18n/messages-en_US.po
@@ -454,7 +454,7 @@ msgstr "enable status popin"
 msgid "disa_popin"
 msgstr "disable status popin"
 
-msgid "next_check"
+msgid "nextcheck"
 msgstr "next check"
 
 msgid "linkhistory"
